HTML/CSS editing and commented JavaScript file.

--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,7 @@ body {
 
 header {
   padding: 1%;
-  border: solid 2px var(--border-color);
+  /* border: solid 2px var(--border-color); */
   display: flex;
   width: 100%;
   justify-content: space-between;
@@ -21,12 +21,12 @@ header {
 
 nav {
   padding: 1%;
-  border: solid 2px var(--border-color);
+  /* border: solid 2px var(--border-color); */
   color: var(--button-color);
 }
 header h4 {
   padding: 1%;
-  border: solid 2px var(--border-color);
+  /* border: solid 2px var(--border-color); */
   font-weight: normal;
 }
 
@@ -34,7 +34,7 @@ main {
   display: flex;
   flex-wrap: wrap;
   padding: 1%;
-  border: solid 2px var(--border-color);
+  /* border: solid 2px var(--border-color); */
   margin: 2% 15%;
 }
 #start-point {
@@ -43,7 +43,7 @@ main {
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
-  border: solid 2px var(--border-color);
+  /* border: solid 2px var(--border-color); */
 }
 #start-point-p {
   text-align: center;
@@ -54,20 +54,20 @@ main {
 }
 h1 {
   padding: 2%;
-  border: solid 2px var(--border-color);
+  /* border: solid 2px var(--border-color); */
   font-size: 200%;
   width: 100%;
 }
 
 h2 {
   padding: 2%;
-  border: solid 2px var(--border-color);
+  /* border: solid 2px var(--border-color); */
   font-size: 175%;
   width: 100%;
 }
 
 .column {
-  border: solid 2px var(--border-color);
+  /* border: solid 2px var(--border-color); */
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -79,7 +79,7 @@ button {
   background-color: var(--button-color);
   padding: 2%;
   margin: 2px;
-  border: solid 2px var(--border-color);
+  /* border: solid 2px var(--border-color); */
   border-radius: 5%;
   font-size: 125%;
   height: fit-content;
@@ -87,18 +87,30 @@ button {
 
 #quiz-template {
   width: 100%;
+  display: none;
 }
 
 p {
-  border: solid 2px var(--border-color);
+  /* border: solid 2px var(--border-color); */
   padding: 2%;
   width: 100%;
   font-size: 125%;
 }
 
-#final-score {
+#correct-wrong {
+  border-top: 2px solid black;
+  display: none;
+  color: rgba(55, 55, 55, 0.5);
+  font-style: italic;
+  font-size: 1.5vw;
+  /* border: 5px solid var(--border-color); */
+}
+
+#all-done {
+  display: none;
+  flex-direction: column;
   width: 100%;
-  border: solid 2px var(--border-color);
+  /* border: solid 2px var(--border-color); */
 }
 
 label {
@@ -107,9 +119,13 @@ label {
 
 span {
   padding: 20px;
-  border: 2px solid var(--border-color);
+  /* border: 2px solid var(--border-color); */
 }
 
-#correct-wrong {
-  border: 5px solid var(--border-color);
+#high-scores {
+  /* border: 2px solid var(--border-color); */
+  display: none;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
 }
